--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
   </head>
 <body>
 <div class="firstpage">
-<p id="opening"> The Day in the Life of an Indian Woman</p>
+<p id="opening">Walking a Mile in Her Shoes</p>
 <p id="subheading"> Women everyday in India live in fear of going to work, going to school, and enjoying their livelihood due to the growing number of rapes and sexual assaults. Follow the story of a young woman, dealing with everyday life in India.</p>
 <button class="begin">Click to Begin</button>
 </div>
