--- a/index2.html
+++ b/index2.html
@@ -3,32 +3,22 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Unlock" rel="stylesheet">
   <title>Final Project</title>
   </head>
 <body>
-<div class="firstpage">
+<div class="firstPage">
 <p id="opening">Walking a Mile in Her Shoes</p>
-<p id="subheading"> Women everyday in India live in fear of going to work, going to school, and enjoying their livelihood due to the growing number of rapes and sexual assaults. Follow the story of a young woman, dealing with everyday life in India.</p>
+<p id="subheading"> According to the National Crime Bureau 92 women are reportedly raped each day in India. Follow the fictional story of a girl named Puja, as she lives through a single day in India.  </p>
 <button class="begin">Click to Begin</button>
 </div>
 <div class="intro">
-<p id="intro"> Jyoti is a 25-year-old woman, living in New Dheli, India. She works for a marketing firm 10 miles away from her home. She lives with one female roommate, who works at a diner and goes to school part-time. </p>
-<br> <button onclick="myFunction()" id="myBtn">Read more</button>
-</div>
-<div class="morning">
-<p id="morning"> Every morning, Jyoti wakes up at 5:30am to make it on time to work at 8am. She brushes her teeth, eats a light breakfast,and gets dressed. Knowing her job is a bit of a journey from her home, she considers what would be the best thing to wear. </p>
-<div class="scrollDress">
-<a class="ct-btn-scroll ct-js-btn-scroll" href="#section2"><img alt="Arrow Down Icon" src="https://www.solodev.com/assets/anchor/arrow-down.png"></a></div>
+<p id="intro"> Puja is a 25-year-old woman, living in New Dheli, India. She works for a marketing firm 10 miles away from her home. She lives with one female roommate, who works at a diner and goes to school part-time. </p>
+<div class="navigation">
+<a href="#" class="previous">&laquo; Previous</a>
+<a href="#" class="next">Next &raquo;</a></div>
 
-<section class="whiteBlock">
-<section class="dressed">
-<p id="getDressed"> What should Jyoti Wear?</p>
-<div class="outfitOptions">
-<button class="outfit1">Modern-day, western work attire: blouse, pencil skirt, heels. </button>
-<button class="outfit2">Long-sleeved traditional salwar kamis. Covered up. </button></div>
-<p id="outfit1Response"> While this is beneficial due to the intense heat in India, Jyoti is worried of the unrequited attention she typically recieves when dressed this way.In a survey done by the Thomas Reuter Foundation, India was found to be the most dangerous country for women. Jyoti was always told by her mother to stay covered up to keep herself safe. </p>
-</section>
-</section>
+
 <script src="js/jquery.min.js"></script>
 <script src="js/main.js"></script>
 </body>
